product_docs/docs/pgpool/1.0/06_uninstalling_pgpool-II.mdx
---
title: "Uninstalling Pgpool-II and Extensions"

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/pgpool-ii/user-guides/pgpool-ii-guide/1.0/uninstalling_pgpool-II.html"
  - "/edb-docs/d/pgpool-ii/user-guides/pgpool-ii-guide/latest/uninstalling_pgpool-II.html"
---

The following section outlines the process of uninstalling Pgpool-II and its extensions.

## Uninstalling Pgpool-II

### Uninstalling Pgpool-II on a RHEL/CentOS Host

To uninstall Pgpool-II, assume the identity of the root user and invoke the following command:

On RHEL/CentOS 7:

```text
yum erase edb-pgpool<xx>
```

On RHEL/CentOS 8:

```text
dnf erase edb-pgpool<xx>
```

Where `<xx>` is the Pgpool version.

### Uninstalling Pgpool-II on a Debian/Ubuntu Host

To uninstall Pgpool-II on a Debian/Ubuntu host, invoke the following command:

```text
apt-get remove -y edb-pgpool<xx>
```

Where `<xx>` is the Pgpool version you want to uninstall

### Uninstalling Pgpool-II on an SLES 12 Host

To uninstall Pgpool-II on an SLES host, assume the identity of the root user and invoke the following command:

```text
zypper remove edb-pgpool<xx>
```

Where &lt;xx> is the Pgpool version you wish to uninstall.

### Uninstalling Pgpool-II Linux Uninstaller

The Pgpool-II graphical installer creates an uninstaller that you can use to remove Pgpool-II. The uninstaller is created in the installation directory that you have specified while installing Pgpool. If you have used the default installation directory i.e. `/opt/edb`, then uninstaller will be in the `/opt/edb/pgpool<x.y>` (where &lt;x.y> is the Pgpool version you have installed).

1.  Navigate into the directory that contains the uninstaller and assume superuser privileges. Open the uninstaller and click `Yes` to begin uninstalling Pgpool-II.
2.  The uninstallation process begins. Click `OK` when the uninstallation completes.

## Uninstalling Pgpool-II Extensions

The following section outlines the process of uninstalling Pgpool-II and its extensions.

### Uninstalling Pgpool-II Extensions on a RHEL/CentOS Host

To remove extensions from the server, execute the following command:

On RHEL/CentOS 7:

```text
yum erase edb-as<xx>-pgpool<yy>-extensions
```

On RHEL/CentOS 8:

```text
dnf erase edb-as<xx>-pgpool<yy>-extensions
```

Where `<xx>` is the EDB Postgres Advanced Server version, and `<yy>` is the Pgpool-II extension version.

### Uninstalling Pgpool-II Extensions on an SLES 12 Host

To uninstall Pgpool-II extensions on an SLES host, assume the identity of the root user and invoke the following command:

```text
zypper remove edb-as<xx>-pgpool<yy>-extensions
```

Where `<xx>` is the EDB Postgres Advanced Server version, and `<yy>` is the Pgpool-II extension version you want to uninstall.

### Uninstalling Pgpool-II Extensins on a Debian/Ubuntu Host

To uninstall Pgpool-II extensions on a Debian/Ubuntu host, invoke the following command:

```text
apt-get remove -y edb-as<xx>-pgpool<yy>-extensions
```

Where `<xx>` is the EDB Postgres Advanced Server version, and `<yy>` is the Pgpool-II extension version you want to uninstall.

### Uninstalling Pgpool-II Extensions Linux Graphical Uninstaller

The Pgpool-II extensions graphical installer creates an uninstaller that you can use to remove Pgpool-II extensions. The uninstaller is created in the installation directory. If you have used the default installation directory i.e. `/opt/edb/as<xx>`, then uninstaller will be in the `/opt/edb/as<xx>` (where &lt;xx> is the EDB Postgres Advanced Server version you have installed).

1.  Navigate into the directory that contains the uninstaller and assume superuser privileges. Open the uninstaller and click `Yes` to begin uninstalling Pgpool-II extensions.
2.  The uninstallation process begins. Click `OK` when the uninstallation completes.
