product_docs/docs/pgpool/4.3/06_uninstalling_pgpool-II.mdx
---
title: "Uninstalling EDB Pgpool-II and extensions"

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/pgpool-ii/user-guides/pgpool-ii-guide/1.0/uninstalling_pgpool-II.html"
---

The following section outlines the process of uninstalling EDB Pgpool-II and its extensions.

## Uninstalling EDB Pgpool-II

### Uninstalling EDB Pgpool-II on an RHEL//Rocky Linux/AlmaLinux host

To uninstall EDB Pgpool-II, assume the identity of the root user and invoke the following command:

On RHEL/CentOS 7:

```shell
yum erase edb-pgpool<xx>
```

On RHEL/Rocky Linux/AlmaLinux 8:

```shell
dnf erase edb-pgpool<xx>
```

Where `<xx>` is the EDB Pgpool-II version.

### Uninstalling EDB Pgpool-II on a Debian/Ubuntu host

To uninstall EDB Pgpool-II on a Debian/Ubuntu host, invoke the following command:

```shell
apt-get remove -y edb-pgpool<xx>
```

Where `<xx>` is the EDB Pgpool-II version you want to uninstall

### Uninstalling EDB Pgpool-II on a SLES 12 host

To uninstall EDB Pgpool-II on a SLES host, assume the identity of the root user and invoke the following command:

```shell
zypper remove edb-pgpool<xx>
```

Where &lt;xx> is the EDB Pgpool-II version you wish to uninstall.

### Uninstalling EDB Pgpool-II Linux uninstaller

The EDB Pgpool-II graphical installer creates an uninstaller in the installation directory. If you have used the default installation directory, i.e. `/opt/edb`, then uninstaller will be in the `/opt/edb/pgpool<x.y>` (where &lt;x.y> is the EDB Pgpool-II version you have installed).

1.  Navigate into the directory that contains the uninstaller and assume superuser privileges. Open the uninstaller and click `Yes` to begin uninstalling EDB Pgpool-II.

2.  The uninstallation process begins. Click `OK` when the uninstallation completes.

## Uninstalling EDB Pgpool-II extensions

The following section outlines the process of uninstalling EDB Pgpool-II and its extensions.

### Uninstalling EDB Pgpool-II extensions on an RHEL/CentOS/Rocky Linux/AlmaLinux host

To remove extensions from the server, execute the following command:

On RHEL/CentOS 7:

```shell
yum erase edb-as<xx>-pgpool<yy>-extensions
```

On RHEL/Rocky Linux/AlmaLinux 8:

```shell
dnf erase edb-as<xx>-pgpool<yy>-extensions
```

Where `<xx>` is the EDB Postgres Advanced Server version, and `<yy>` is the EDB Pgpool-II extension version.

### Uninstalling EDB Pgpool-II extensions on a SLES 12 host

To uninstall EDB Pgpool-II extensions on a SLES host, assume the identity of the root user and invoke the following command:

```shell
zypper remove edb-as<xx>-pgpool<yy>-extensions
```

Where `<xx>` is the EDB Postgres Advanced Server version, and `<yy>` is the EDB Pgpool-II extension version you want to uninstall.

### Uninstalling EDB Pgpool-II extensions on a Debian/Ubuntu host

To uninstall EDB Pgpool-II extensions on a Debian/Ubuntu host, invoke the following command:

```shell
apt-get remove -y edb-as<xx>-pgpool<yy>-extensions
```

Where `<xx>` is the EDB Postgres Advanced Server version, and `<yy>` is the EDB Pgpool-II extension version you want to uninstall.

### Uninstalling EDB Pgpool-II extensions Linux graphical uninstaller

The EDB Pgpool-II extensions graphical installer creates an uninstaller in the installation directory. If you have used the default installation directory, i.e. `/opt/edb/as<xx>`, then uninstaller will be in the `/opt/edb/as<xx>` (where &lt;xx> is the EDB Postgres Advanced Server version you have installed).

1.  Navigate into the directory that contains the uninstaller and assume superuser privileges. Open the uninstaller and click `Yes` to begin uninstalling EDB Pgpool-II extensions.
2.  The uninstallation process begins. Click `OK` when the uninstallation completes.
